--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <ul class="menu__list">
               <li><a href="#barf" class="menu__link">BARF</a></li>
               <li><a href="#diets" class="menu__link">Рационы</a></li>
-              <li><a href="#why-zooov" class="menu__link">ZOOOV</a></li>
+              <li><a href="#why-zooov" class="menu__link">Почему мы</a></li>
               <li><a href="#about-zooov" class="menu__link">О нас</a></li>
               <li><a href="#delivery" class="menu__link">Доставка</a></li>
               <li><a href="#faq" class="menu__link">FAQ</a></li>
@@ -162,12 +162,12 @@
         </div>
 
         <div class="diets" id="diets">
-          <h2 class="diets__subtitle subtitle">Рационы ZOOOV</h2>
+          <h2 class="diets__subtitle subtitle">Наши Рационы</h2>
           <div class="diets__text text text_color-black">
             Система питания взрослой собаки не подойдет для щенка, поэтому мы
-            создали разные по составу рационы ZOOOV. Вы сможете заказать
-            полноценное питание исходя из возраста, веса и даже вкусовых
-            предпочтений вашего друга. ZOOOV заботится о каждой собаке.
+            создали разные по составу рационы. Вы сможете заказать полноценное
+            питание исходя из возраста, веса и даже вкусовых предпочтений вашего
+            друга. Мы заботимся о каждой собаке.
           </div>
           <div class="diets__items">
             <div class="diets__item">
@@ -302,7 +302,7 @@
             <div class="diet-calc__text">
               <p>
                 Рассчитаем в каком количестве нужно кормить вашего хвостика
-                рационами Zooov
+                нашими рационами
               </p>
             </div>
             <div class="diet-calc__button">
@@ -312,7 +312,7 @@
         </div>
 
         <div class="why-zooov" id="why-zooov">
-          <h2 class="why-zooov__subtitle subtitle">Почему ZOOOV</h2>
+          <h2 class="why-zooov__subtitle subtitle">Почему мы</h2>
           <div class="why-zooov__items">
             <div class="why-zooov__item">
               <div class="why-zooov__image">
@@ -348,8 +348,8 @@
               </div>
               <h3 class="why-zooov__minisubtitle minisubtitle">Удобно</h3>
               <div class="why-zooov__descrition text text_color-black">
-                Достаточно разморозить порцию ZOOOV, удалить отрывную крышку с
-                лотка и обед для вашего питомца готов.
+                Достаточно разморозить порцию, удалить отрывную крышку с лотка и
+                обед для вашего питомца готов.
               </div>
             </div>
           </div>
@@ -380,15 +380,13 @@
             </div>
           </div>
           <div class="about-zooov__description" id="about-zooov">
-            <h2 class="about-zooov__subtitle subtitle">
-              С заботой и любовью от Zooov
-            </h2>
+            <h2 class="about-zooov__subtitle subtitle">С заботой и любовью</h2>
             <div class="about-zooov__text text">
               <p>
                 Мы сами владельцы собак и знаем, как важно правильное и
                 качественное питание для долгой и счастливой жизни вашего
-                питомца. Для нас ZOOOV это не просто бизнес, это наш вклад в
-                повышение качества жизни всех собак.
+                питомца. Для нас это не просто бизнес, это наш вклад в повышение
+                качества жизни всех собак.
               </p>
               <p>
                 Мы знаем, как правильно подобрать и переработать мясо,
@@ -397,8 +395,9 @@
               </p>
               <p>
                 Обычного сырого мяса из магазина будет недостаточно для
-                полноценного питания собаки. ZOOOV — экономия времени, вам не
-                придется искать необходимые составляющие для рациона.
+                полноценного питания собаки. Наши рационы — это экономия
+                времени, вам не придется искать необходимые составляющие для
+                рациона.
               </p>
               <p>
                 Мы сами отбираем мясо, кости, легкие, печень и другие говяжьи,
@@ -407,9 +406,9 @@
                 такие как конопляное и льняное.
               </p>
               <p>
-                ZOOOV — это удобно, мы доставляем готовый рацион на две недели
-                уже смешанным, расфасованным и упакованным в порционные
-                лотки,готовыми к заморозке. За два часа до кормления достаточно
+                Это удобно,юмы доставляем готовый рацион на две недели уже
+                смешанным, расфасованным и упакованным в порционные лотки,
+                готовыми к заморозке. За два часа до кормления достаточно
                 переместить контейнер из морозилки в холодильник для ПРАВИЛЬНОЙ
                 разморозки.
               </p>
@@ -425,7 +424,7 @@
         </div>
 
         <div class="delivery" id="delivery">
-          <h2 class="delivery__subtitle subtitle">Как получить ZOOOV?</h2>
+          <h2 class="delivery__subtitle subtitle">Как сделать заказ?</h2>
           <div class="delivery__items">
             <div class="delivery__item">
               <div class="delivery__image">
@@ -550,7 +549,7 @@
             </div>
             <div class="spoiler__item">
               <div class="spoiler__minisubtitle minisubtitle">
-                Присутствует ли в ZOOOV рационах рыба?
+                Присутствует ли в рационах рыба?
               </div>
               <div class="spoiler__text text">
                 При составлении рационов мы не используем продукты
@@ -579,14 +578,14 @@
             </div>
             <div class="spoiler__item">
               <div class="spoiler__minisubtitle minisubtitle">
-                Как готовить рацион ZOOOV?
+                Как приготовить рацион?
               </div>
               <div class="spoiler__text text">
                 Мы доставляем порции необходимого объема замороженными, в
                 специальных термосумках. Вы помещаете рацион в свой домашний
                 морозильник. Перед кормлением порцию необходимо поместить для
                 разморозки на ночь в холодильник или размораживать при комнатной
-                температуре 3-4 часа. (НЕ ИСПОЛЬЗОВАТЬ МИКРОВОЛНОВКу!) Больше
+                температуре 3-4 часа. (НЕ ИСПОЛЬЗОВАТЬ МИКРОВОЛНОВКУ!) Больше
                 никакой обработке подвергать пищу не надо. Непосредственно перед
                 кормление снять отрывную крышку. Благодаря качественной и
                 продуманной упаковке во время разморозки ни в холодильнике, ни в
@@ -596,8 +595,8 @@
             </div>
             <div class="spoiler__item">
               <div class="spoiler__minisubtitle minisubtitle">
-                При переходе на рацион ZOOOV у собаки начались проблемы с ЖКТ.
-                Это нормально?
+                При переходе на ваш рацион у собаки начались проблемы с ЖКТ. Это
+                нормально?
               </div>
               <div class="spoiler__text text">
                 При переводе вашего питомца на натуральный корм могут появиться
